# go-api/docs/swagger.json
@@ -69,6 +69,11 @@
         },
         "/logout": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Invalida todos los refresh tokens del usuario",
                 "consumes": [
                     "application/json"
